--- a/core/deposit/Cargo.toml
+++ b/core/deposit/Cargo.toml
@@ -28,7 +28,7 @@ audit = { workspace = true }
 authz = { workspace = true }
 obix = { workspace = true }
 domain-config = { workspace = true }
-job = { version = "0.6.0" }
+job = { workspace = true }
 cloud-storage = { workspace = true }
 
 cala-ledger = { workspace = true }
