--- a/lana/customer-sync/Cargo.toml
+++ b/lana/customer-sync/Cargo.toml
@@ -13,7 +13,7 @@ core-deposit = { workspace = true }
 governance = { workspace = true }
 
 obix = { workspace = true }
-job = {  version = "0.6.0" }
+job = { workspace = true }
 audit = { workspace = true }
 authz = { workspace = true }
 
