--- a/typos.toml
+++ b/typos.toml
@@ -11,6 +11,7 @@ extend-exclude = [
 	"dagster/src/dbt_lana_dw/models/*/el-salvador-ssf/*",
 	"dagster/src/dbt_lana_dw/models/*/uif/*",
 	"dagster/src/dbt_lana_dw/models/outputs/non-regulatory/*",
+	"dagster/generate_es_reports/schemas/*",
 	"dev/keycloak/internal-realm.json",
 	"dev/keycloak/customer-realm.json",
 	"docs/mermaid-init.js",
