feat: GQL over SSE (#3318)
* feat: GQL over SSE

* feat: pending facility collateralization_updated subscription

* chore: add facility_collateralization_updated subscription

* chore: remove subscribe_* methods

* chore: add PendingCreditFacilityCompleted Subscription

* chore: remove redundant Subscription and update admin-panel

* chore: add instrument

--- a/lana/admin-server/Cargo.toml
+++ b/lana/admin-server/Cargo.toml
@@ -12,7 +12,7 @@ sumsub-testing = ["lana-app/sumsub-testing"]
 [dependencies]
 lana-app = { workspace = true }
 domain-config = { workspace = true, features = ["graphql"] }
-
+obix = { workspace = true }
 audit = { workspace = true }
 tracing-utils = { workspace = true, features = ["http"] }
 jwks-utils = { workspace = true }
@@ -33,4 +33,7 @@ tokio = { workspace = true }
 rust_decimal = { workspace = true }
 anyhow = { workspace = true }
 thiserror = { workspace = true }
+
+futures = { workspace = true }
+
 workspace-hack = { version = "0.1", path = "../../workspace-hack" }
