--- a/core/domain-config/Cargo.toml
+++ b/core/domain-config/Cargo.toml
@@ -12,6 +12,8 @@ graphql = ["es-entity/graphql", "dep:async-graphql"]
 json-schema = ["dep:schemars", "es-entity/json-schema"]
 
 [dependencies]
+audit = { workspace = true }
+authz = { workspace = true }
 es-entity = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 derive_builder = { workspace = true }
@@ -23,6 +25,7 @@ tracing = { workspace = true }
 tracing-macros = { workspace = true }
 tracing-utils = { workspace = true }
 rust_decimal = { workspace = true }
+strum = { workspace = true }
 async-graphql = { workspace = true, optional = true }
 workspace-hack = { version = "0.1", path = "../../workspace-hack" }
 schemars = { workspace = true, optional = true }
