--- a/lana/app/Cargo.toml
+++ b/lana/app/Cargo.toml
@@ -4,14 +4,9 @@ license = "BUSL-1.1"
 edition = "2024"
 
 [package.metadata.cargo-machete]
-ignored = ["sim-time", "schemars"]
+ignored = ["schemars"]
 
 [features]
-sim-time = [
-  "dep:sim-time",
-  "core-credit/sim-time",
-  "core-deposit/sim-time",
-]
 
 fail-on-warnings = []
 mock-custodian = ["core-custody/mock-custodian", "core-credit/mock-custodian"]
