feat: first file reports (#3348)
* chore: bring over py package

* chore: adjust report manifest

* chore: make package importable inside container

* chore: add back BQ table fetcher

* chore: add function to map deps

* chore: report callable

* chore: file report protoasset factory

* chore: use dbt dataset, not staging one

* chore: module imports

* feat: add new definitions

* chore: cleanup

* chore: fmt, typos

* chore: typos

* chore: bring back Report

--- a/typos.toml
+++ b/typos.toml
@@ -12,6 +12,8 @@ extend-exclude = [
 	"dagster/src/dbt_lana_dw/models/*/el-salvador-ssf/*",
 	"dagster/src/dbt_lana_dw/models/*/uif/*",
 	"dagster/src/dbt_lana_dw/models/outputs/non-regulatory/*",
+	"dagster/generate_es_reports/schemas/*",
+	"dagster/generate_es_reports/reports.yml",
 	"dev/keycloak/internal-realm.json",
 	"dev/keycloak/customer-realm.json",
 	"docs/mermaid-init.js",
