chore: poc for avro

--- a/core/money/Cargo.toml
+++ b/core/money/Cargo.toml
@@ -7,10 +7,12 @@ edition = "2024"
 fail-on-warnings = []
 json-schema = ["schemars"]
 graphql = ["async-graphql"]
+avro = ["apache-avro"]
 
 [dependencies]
 
 serde = { workspace = true }
+apache-avro = { workspace = true, optional = true }
 thiserror = { workspace = true }
 tracing = { workspace = true }
 tracing-utils = { workspace = true }
