--- a/core/deposit/Cargo.toml
+++ b/core/deposit/Cargo.toml
@@ -16,6 +16,11 @@ json-schema = [
     "core-money/json-schema",
     "public-id/json-schema",
 ]
+avro = [
+    "dep:apache-avro",
+    "dep:avro-derive",
+    "core-money/avro",
+]
 
 [dependencies]
 core-money = { workspace = true }
@@ -53,6 +58,8 @@ async-graphql = { workspace = true, optional = true }
 sim-time = { workspace = true, optional = true }
 base64 = { workspace = true }
 schemars = { workspace = true, optional = true }
+apache-avro = { workspace = true, optional = true }
+avro-derive = { workspace = true, optional = true }
 workspace-hack = { version = "0.1", path = "../../workspace-hack" }
 
 [dev-dependencies]
