chore(deps): bump es-entity,cala

--- a/workspace-hack/Cargo.toml
+++ b/workspace-hack/Cargo.toml
@@ -41,6 +41,7 @@ either = { version = "1", features = ["serde", "use_std"] }
 elliptic-curve = { version = "0.13", default-features = false, features = ["digest", "hazmat", "pem", "std"] }
 es-entity = { version = "0.10", default-features = false, features = ["event-context", "graphql", "instrument", "json-schema", "tracing-context"] }
 ff = { version = "0.13", default-features = false, features = ["alloc"] }
+fixedbitset = { version = "0.4" }
 form_urlencoded = { version = "1" }
 futures-channel = { version = "0.3", features = ["sink"] }
 futures-sink = { version = "0.3" }
@@ -64,6 +65,7 @@ obix = { version = "0.2", features = ["tracing"] }
 once_cell = { version = "1", features = ["portable-atomic"] }
 opentelemetry-http = { version = "0.31", features = ["reqwest-rustls-webpki-roots"] }
 opentelemetry-otlp = { version = "0.31", default-features = false, features = ["grpc-tonic", "http-proto", "reqwest-client", "reqwest-rustls-webpki-roots"] }
+petgraph = { version = "0.6" }
 pkcs8 = { version = "0.10", default-features = false, features = ["encryption", "pem", "std"] }
 prost = { version = "0.13", features = ["prost-derive"] }
 rand = { version = "0.9" }
@@ -124,6 +126,7 @@ elliptic-curve = { version = "0.13", default-features = false, features = ["dige
 es-entity = { version = "0.10", default-features = false, features = ["event-context", "graphql", "instrument", "json-schema", "tracing-context"] }
 es-entity-macros = { version = "0.10", default-features = false, features = ["event-context", "graphql", "instrument"] }
 ff = { version = "0.13", default-features = false, features = ["alloc"] }
+fixedbitset = { version = "0.4" }
 form_urlencoded = { version = "1" }
 futures-channel = { version = "0.3", features = ["sink"] }
 futures-sink = { version = "0.3" }
@@ -148,6 +151,7 @@ obix-macros = { version = "0.2", default-features = false, features = ["tracing"
 once_cell = { version = "1", features = ["portable-atomic"] }
 opentelemetry-http = { version = "0.31", features = ["reqwest-rustls-webpki-roots"] }
 opentelemetry-otlp = { version = "0.31", default-features = false, features = ["grpc-tonic", "http-proto", "reqwest-client", "reqwest-rustls-webpki-roots"] }
+petgraph = { version = "0.6" }
 pkcs8 = { version = "0.10", default-features = false, features = ["encryption", "pem", "std"] }
 prost = { version = "0.13", features = ["prost-derive"] }
 rand = { version = "0.9" }
