chore: inject time via config

--- a/dev/lana.default.yml
+++ b/dev/lana.default.yml
@@ -60,6 +60,7 @@ app:
   report: {}
   deposit:
     require_verified_customer_for_account: true
+  time: null
 tracing:
   service_name: lana-dev
 time:
