--- a/bats/lana.yml
+++ b/bats/lana.yml
@@ -31,5 +31,8 @@ app:
     balance_sheet_config_path: "./bats/accounting-init/balance-sheet-module-config.json"
     profit_and_loss_config_path: "./bats/accounting-init/profit-and-loss-module-config.json"
     fiscal_year_config_path: "./bats/accounting-init/fiscal-year-module-config.json"
-time:
-  realtime: false
+  time:
+    start_at: 2021-01-01T00:00:00Z
+    mode:
+      type: auto_advance
+      time_scale: 500000.00
