--- a/docs-site/package.json
+++ b/docs-site/package.json
@@ -11,7 +11,11 @@
     "clear": "docusaurus clear",
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
-    "write-heading-ids": "docusaurus write-heading-ids"
+    "write-heading-ids": "docusaurus write-heading-ids",
+    "generate-api-docs": "docusaurus graphql-to-doc:admin && docusaurus graphql-to-doc:customer",
+    "generate-api-docs:admin": "docusaurus graphql-to-doc:admin",
+    "generate-api-docs:customer": "docusaurus graphql-to-doc:customer",
+    "prebuild": "npm run generate-api-docs"
   },
   "dependencies": {
     "@docusaurus/core": "^3.7.0",
@@ -21,7 +25,9 @@
     "prism-react-renderer": "^2.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "@docusaurus/theme-mermaid": "^3.7.0"
+    "@docusaurus/theme-mermaid": "^3.7.0",
+    "@graphql-markdown/docusaurus": "^1.26.1",
+    "@graphql-tools/graphql-file-loader": "^8.0.0"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "^3.7.0",
