--- a/lana/cli/Cargo.toml
+++ b/lana/cli/Cargo.toml
@@ -24,7 +24,7 @@ sim-bootstrap = { workspace = true, optional = true }
 
 tracing-utils = { workspace = true, features = ["http"] }
 
-sim-time = { workspace = true, optional = true }
+es-entity = { workspace = true }
 
 anyhow = { workspace = true }
 base64 = { workspace = true }
