--- a/core/document-storage/Cargo.toml
+++ b/core/document-storage/Cargo.toml
@@ -10,6 +10,8 @@ json-schema = ["dep:schemars", "es-entity/json-schema"]
 
 [dependencies]
 cloud-storage = { workspace = true }
+obix = { workspace = true }
+strum = { workspace = true }
 
 es-entity = { workspace = true }
 sqlx = { workspace = true }
