fix: create lana dir in image

--- a/Dockerfile.release
+++ b/Dockerfile.release
@@ -4,6 +4,8 @@ RUN apk add --no-cache \
     font-liberation \
     fontconfig
 
+RUN mkdir -p /lana && chown 1000:1000 /lana
+
 FROM gcr.io/distroless/static
 
 # Copy the pre-built binary from build context
@@ -12,6 +14,8 @@ COPY --chmod=0755 binaries/lana-cli /bin/lana-cli
 # Copy Liberation fonts and FontConfig configuration
 COPY --from=base /usr/share/fonts/liberation /usr/share/fonts/liberation
 COPY --from=base /etc/fonts/fonts.conf /etc/fonts/fonts.conf
+
+COPY --from=base --chown=1000:1000 /lana /lana
 
 USER 1000
 
